--- a/pom.xml
+++ b/pom.xml
@@ -13,8 +13,12 @@
         <maven.compiler.target>20</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
+        <webdriver.base.url>https://petstore.swagger.io/v2</webdriver.base.url>
+
         <junit.version>5.10.0</junit.version>
         <lombok.version>1.18.24</lombok.version>
+        <surefire.plugin.version>3.0.0-M5</surefire.plugin.version>
+        <checkstyle.plugin.version>3.1.0</checkstyle.plugin.version>
     </properties>
 
     <dependencies>
@@ -54,12 +58,51 @@
         </dependency>
     </dependencies>
 
+    <profiles>
+        <profile>
+            <id>production</id>
+            <properties>
+                <webdriver.base.url>https://petstore.swagger.io/v2</webdriver.base.url>
+            </properties>
+        </profile>
+        <profile>
+            <id>test</id>
+            <properties>
+                <webdriver.base.url>https://petstore.swagger.io/v2</webdriver.base.url>
+            </properties>
+        </profile>
+    </profiles>
+
     <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.0.0-M5</version>
+                <version>${surefire.plugin.version}</version>
+                <configuration>
+                    <systemPropertyVariables>
+                        <webdriver.base.url>${webdriver.base.url}</webdriver.base.url>
+                    </systemPropertyVariables>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-checkstyle-plugin</artifactId>
+                <version>${checkstyle.plugin.version}</version>
+                <configuration>
+                    <includeTestSourceDirectory>true</includeTestSourceDirectory>
+                    <configLocation>src/main/resources/checkstyle.xml</configLocation>
+                    <consoleOutput>true</consoleOutput>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>analyze-compile</id>
+                        <phase>compile</phase>
+                        <goals>
+                            <goal>check</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
