--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <maven.compiler.source>20</maven.compiler.source>
         <maven.compiler.target>20</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <allure.results.directory>${project.basedir}/allure-results</allure.results.directory>
 
         <base.api.url>https://petstore.swagger.io/v2</base.api.url>
         <wiremock.url>http://172.30.207.187:8091</wiremock.url>
@@ -19,18 +20,19 @@
         <junit.version>5.10.0</junit.version>
         <lombok.version>1.18.24</lombok.version>
         <citrus.version>3.2.1</citrus.version>
+        <allure-maven.version>2.12.0</allure-maven.version>
         <surefire.plugin.version>3.0.0-M5</surefire.plugin.version>
         <checkstyle.plugin.version>3.1.0</checkstyle.plugin.version>
         <slf4j.version>1.7.30</slf4j.version>
         <log4j2.version>2.15.0</log4j2.version>
+        <allure.version>2.24.0</allure.version>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-api</artifactId>
+            <artifactId>junit-jupiter</artifactId>
             <version>${junit.version}</version>
-            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -107,6 +109,25 @@
             <artifactId>citrus-validation-json</artifactId>
             <version>${citrus.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>io.qameta.allure</groupId>
+            <artifactId>allure-bom</artifactId>
+            <version>${allure.version}</version>
+            <type>pom</type>
+            <scope>import</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.qameta.allure</groupId>
+            <artifactId>allure-junit5</artifactId>
+            <version>${allure.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.qameta.allure</groupId>
+            <artifactId>allure-rest-assured</artifactId>
+            <version>${allure.version}</version>
+        </dependency>
     </dependencies>
 
     <profiles>
@@ -131,6 +152,12 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${surefire.plugin.version}</version>
                 <configuration>
+                    <systemProperties>
+                        <property>
+                            <name>allure.results.directory</name>
+                            <value>${project.basedir}/allure-results</value>
+                        </property>
+                    </systemProperties>
                     <systemPropertyVariables>
                         <base.api.url>${base.api.url}</base.api.url>
                         <wiremock.url>${wiremock.url}</wiremock.url>
@@ -155,6 +182,11 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>io.qameta.allure</groupId>
+                <artifactId>allure-maven</artifactId>
+                <version>${allure-maven.version}</version>
             </plugin>
         </plugins>
     </build>
